Add daily log delete flow for PM/admin

--- a/core/templates/core/daily_log_detail.html
+++ b/core/templates/core/daily_log_detail.html
@@ -287,6 +287,9 @@
         <a href="#" class="btn btn-outline-primary">
           <i class="bi bi-pencil"></i> Editar Daily Log
         </a>
+        <a href="{% url 'daily_log_delete' log.id %}" class="btn btn-outline-danger">
+          <i class="bi bi-trash"></i> Eliminar Daily Log
+        </a>
         {% endif %}
       </div>
     </div>
