--- a/core/templates/core/payroll_summary.html
+++ b/core/templates/core/payroll_summary.html
@@ -205,14 +205,19 @@
                     <tr>
                         <td>{{ row.employee.first_name }} {{ row.employee.last_name }}</td>
                         <td>{{ row.week_period }}</td>
-                        {% for h in row.hours_by_day %}
-                            <td>
-                                <input type="number" 
-                                       name="hours_{{ row.employee.id }}_{{ forloop.counter0 }}" 
-                                       value="{{ h|default_if_none:'' }}" 
-                                       min="0" 
-                                       step="0.25" 
-                                       class="form-control" />
+                        {% for day in row.day_entries %}
+                            <td style="min-width:110px;">
+                                <div class="d-flex flex-column gap-1">
+                                    <input type="time"
+                                           name="start_{{ row.employee.id }}_{{ forloop.counter0 }}"
+                                           value="{{ day.start }}"
+                                           class="form-control form-control-sm" />
+                                    <input type="time"
+                                           name="end_{{ row.employee.id }}_{{ forloop.counter0 }}"
+                                           value="{{ day.end }}"
+                                           class="form-control form-control-sm" />
+                                    <small class="text-muted">{{ day.hours|default_if_none:'0' }} h</small>
+                                </div>
                             </td>
                         {% endfor %}
                         <td>
@@ -221,9 +226,13 @@
                                    value="{{ row.total_hours }}" 
                                    min="0" 
                                    step="0.25" 
-                                   class="form-control" />
+                                   class="form-control" 
+                                   readonly />
                         </td>
-                        <td>${{ row.hourly_rate }}</td>
+                        <td>
+                            {{ row.form.hourly_rate }}
+                            <div class="small text-muted">Adj: {{ row.form.adjusted_rate }}</div>
+                        </td>
                         <td class="total-pay">${{ row.total_pay }}</td>
                         <td>
                             {% if row.form.instance.paid %}
