--- a/core/templates/core/unassigned_timeentries.html
+++ b/core/templates/core/unassigned_timeentries.html
@@ -104,7 +104,7 @@
         <tbody>
           {% for te in page_obj.object_list %}
             <tr>
-              <td><input type="checkbox" name="selected" value="{{ te.id }}" data-hours="{{ te.hours_worked|default:'0' }}" data-project="{{ te.project.id|default:'' }}" onchange="recalcSelection()" /></td>
+              <td><input type="checkbox" name="selected" value="{{ te.id }}" data-hours="{{ te.hours_worked|default:'0' }}" data-project="{% if te.project %}{{ te.project.id }}{% endif %}" onchange="recalcSelection()" /></td>
               <td>{{ te.date }}</td>
               <td>{{ te.employee.first_name }} {{ te.employee.last_name }}</td>
               <td>
